@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-14T01:28:15Z",
+  "timestamp" : "2022-07-14T08:19:22Z",
   "count_outdated" : 387,
   "uniques_outdated" : 223,
   "count" : 419,
-  "uniques" : 241,
+  "uniques" : 242,
   "clones" : [
     {
       "timestamp": "2022-06-30T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -100,6 +100,13 @@
       "timestamp": "2022-07-13T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
